--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://dgd.vn/">
-    <meta property="og:title" content="Tải ứng dụng DGD">
+    <meta property="og:title" content="Đang chuyển hướng đến DGD...">
     <meta property="og:description" content="Bấm vào đây để tải ứng dụng DGD cho điện thoại của bạn.">
     <meta property="og:image" content="https://media.dgd.vn/assets/editor/111c68e1-c807-47b0-9bf3-955391ecdb9a.png">
 
@@ -65,7 +65,7 @@
 
     <div class="message">
         <p>
-            Đang đưa bạn đến trang tải ứng dụng DGD...<br>
+            Đang đưa bạn đến Sàn đấu giá trực tuyến DGD...<br>
             Nếu không tự động chuyển, <a href="https://dgd.vn">Bấm vào đây</a>.
         </p>
     </div>
